--- a/templates/login.html
+++ b/templates/login.html
@@ -1,11 +1,25 @@
+<link rel="stylesheet" href="static/style.css" type="text/css">
 {% block body %}
 {% if session['logged_in'] %}
  
 You're logged in already!
  
 {% else %}
+ 
 <form action="/login" method="POST">
-  <input type="username" name="username" placeholder="Username">
-<input type="submit" value="Log in">
+<div class="login">
+<div class="login-screen">
+<div class="app-title">
+	<h1>Podaj swoje imię:</h1>
+</div>
+<div class="login-form">
+<div class="control-group">
+	<input type="text" class="login-field" value="" placeholder="username" name="username">
+	<label class="login-field-icon fui-user" for="login-name"></label></div>
+<div class="control-group">
+	<input type="submit" value="Log in" class="btn btn-primary btn-large btn-block">
+</div>
+</div>
+</div>
 </form>{% endif %}
 {% endblock %}
