--- a/templates/chat.html
+++ b/templates/chat.html
@@ -10,7 +10,7 @@
 <body>
 <div class="container">
 	<div class="alert alert-primary" role="alert">
-User: {{user_input}}
+TFNiS: {{user_input}}
 </div>
 <div class="alert alert-dark" role="alert">
   ChatBot: {{bot_response}}
