--- a/templates/index.html
+++ b/templates/index.html
@@ -84,5 +84,7 @@
   				<button name="submit">Wyślij</button>
 			</div>
 		</form>
+		<div class="footer">Projekt inteligentnego bota tekstowego. Twórcy: Tomasz Derek, Patryk Kisielewski.<br>Wersja strony: 1.18. <span>Wersja silnika 3.0</span></div>
+	
 	</body>
 </html>
