textarea→input everywhere (templates/index.html)

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
 		</div>
 					
 		<style> 
-			  textarea {
+			  input {
 			  width: 20%;
 			  height: 50px;
 			  padding: 12px 20px;
@@ -79,7 +79,7 @@
 		</style>
 
 		<form method="POST"> 
-  			<textarea name="textbox"></textarea>
+  			<input name="textbox"></textarea>
 			<div class="buttonHolder">
   				<button name="submit">Wyślij</button>
 			</div>
