--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
 		</style>
 
 		<form method="POST"> 
-  			<input name="textbox"></textarea>
+  			<input name="textbox"></input>
 			<div class="buttonHolder">
   				<button name="submit">Wyślij</button>
 			</div>
